chore: fix project tag css, visually align end of sides in home

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 55vw;
     height: 100vh;
-    padding: 10vh 0;
+    /* padding: 10vh 0; */
     gap: 5vh;
     /* justify-content: space-between; */
     /* align-items: ; */
